# app/Http/Controllers/V1/SupplierController.php
@@ -201,10 +201,18 @@ class SupplierController extends Controller
      *         required=true,
      *         @OA\Schema(type="integer")
      *     ),
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\JsonContent(ref="#/components/schemas/SupplierRequest")
-     *     ),
+     *  @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              @OA\Property(property="name", type="string"),
+     *              @OA\Property(property="last_name", type="string"),
+     *              @OA\Property(property="address", type="string"),
+     *              @OA\Property(property="phone_number", type="string"),
+     *              @OA\Property(property="mail", type="string"),
+     *              @OA\Property(property="dni", type="string"),
+     *              @OA\Property(property="cuit", type="string")
+     *          )
+     *      ),
      *     @OA\Response(
      *         response=200,
      *         description="Supplier updated successfully",
@@ -219,6 +227,7 @@ class SupplierController extends Controller
             $request->input('notes'),
             null,
             new PersonDTO(
+                $id,
                 $request->input('person_id'),
                 $request->input('person.name'),
                 $request->input('person.last_name'),
